Some cleaning up in the velocity templates. mainly because in the single screen issue view the screen was flickering during rendering.
- added some reasonable table width statements,
- refactored tooltips into own tooltips.js
- cleaned up structural errors like missing #end, 
  missing <div> and so on in xeveral .vm files.


git-svn-id: http://scarab.tigris.org/svn/scarab@9936 3c7165bb-d2ef-0310-b724-bafd9a86081f

--- a/trunk/src/webapp/style/scarab.css
+++ b/trunk/src/webapp/style/scarab.css
@@ -209,6 +209,7 @@ padding-left: 1em;
 	border-color:#AAAAAA;
 	padding:2px;
 	width:250px;
+	margin-left:20px;
 }
 
 .scarab-icon
